sg.tf



resource "aws_security_group" "sg_vpcA" {
  
  name        = "Security Group for VPC A"
  description = "Security Group for VPC A"
  vpc_id = aws_vpc.vpc-A.id
  

  ingress {
    description      = "Allow all ICMP traffic from anywhere"
    from_port        = -1
    to_port          = -1
    protocol         = "icmp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }
  ingress {
    description      = "Allow SSH traffic from anywhere"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  egress {
    description = "Allow all outbound traffic"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "Security Group for VPC A"
  }
}


resource "aws_security_group" "sg_vpcB" {
  
  name        = "Security Group for VPC B"
  description = "Security Group for VPC B"
  vpc_id = aws_vpc.vpc-B.id
  

  ingress {
    description      = "Allow all ICMP traffic from anywhere"
    from_port        = -1
    to_port          = -1
    protocol         = "icmp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }
  ingress {
    description      = "Allow SSH traffic from anywhere"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  egress {
    description = "Allow all outbound traffic"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "Security Group for VPC B"
  }
}

resource "aws_security_group" "sg_vpcC" {
  
  name        = "Security Group for VPC C"
  description = "Security Group for VPC C"
  vpc_id = aws_vpc.vpc-C.id
  

  ingress {
    description      = "Allow all ICMP traffic from anywhere"
    from_port        = -1
    to_port          = -1
    protocol         = "icmp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }
  ingress {
    description      = "Allow SSH traffic from anywhere"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  egress {
    description = "Allow all outbound traffic"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "Security Group for VPC C"
  }
}
